--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "dependencies": {
     "next": "^13.5.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "^5.2.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "20.6.3",
-    "@types/react": "18.2.22"
+    "@types/react": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "typescript": "^5.2.2"
   }
 }
