--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "app/page.tsx"  ],
+, "app/page.tsx", "pages/tests/Controller.test.js"  ],
   "exclude": [
     "node_modules"
   ]
